name:                css2HsClassName
version:             0.1.0.2
synopsis:            Utilities to generate css and html tags to reflex
description:         Utilities to generate css and html tags to reflex. 
                     This provides semi-automatic results that are
                     hs-files to be used with reflex (or with its libs).
                     Feed this with css-files and this transforms them 
                     to classNames, that is, to "raw material" to be used
                     with other libs.
                     See https://github.com/gspia/reflex-dom-themes
license:             BSD3
license-file:        LICENSE
author:              gspia
maintainer:          Use github to contact
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
                    , README.md
                    , default.nix
                    , shell.nix
                    , css2HsClassName.nix
                    , Setup.hs
                    , mkSeveral.sh
cabal-version:       >=1.24

executable css2HsClassName
  main-is:             css2HsClassName.hs
  build-depends:       base >=4.9 && <5
                       , text >= 1.2.2.2 && <=1.3
                       , css-syntax >= 0.0.5 && <= 0.2

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns 
                       -Wincomplete-record-updates 
                       -Wmissing-import-lists 

